# rotomax_app

./: .gitignore  README.md  ai_settings.json  car_load.py  main.py  manifest.json  osrm_distance_cache.json  pyproject.toml  requirements.txt  sw.js
data_route/: rota_shoppe.xlsx
