[project]
name = "rotomax-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.28.0",
    "dotenv>=0.9.9",
    "folium>=0.16.0",
    "pandas>=2.0.0",
    "pdf2image>=1.17.0",
    "requests>=2.31.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.35.0",
    "streamlit-folium>=0.20.0",
    "streamlit-js-eval>=1.0.0",
]
